--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <!-- inject:css -->
+      <link rel="stylesheet" type="text/css" href="src/prePost.feed/votes.css">
     <!-- endinject -->
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -24,6 +25,7 @@
     <script src="src/prePost.upload/upload.module.js"></script>
     <script src="src/prePost.upload/upload.controller.js"></script>
     <script src="src/prePost.services/services.module.js"></script>
+    <script src="src/prePost.services/posts.service.js"></script>
     <script src="src/prePost.services/friends.service.js"></script>
     <script src="src/prePost.selector/selector.module.js"></script>
     <script src="src/prePost.selector/selector.controller.js"></script>
