--- a/www/src/prePost.feed/feed.html
+++ b/www/src/prePost.feed/feed.html
@@ -1,5 +1,28 @@
 <ion-view title="Feed">
   <ion-content class="padding">
-    <h1>Feed</h1>
+  	<div class="list card" ng-repeat="post in posts">
+
+      <div class="item item-avatar">
+        <img ng-src='{{post.user.image}}'>
+        <h2>{{post.user.name}}</h2>
+        <p>{{post.created_at}}</p>
+      </div>
+
+      <div class="item item-body">
+        <img class="full-image" ng-src='{{post.image}}'>
+      </div>
+
+      <div class="item tabs tabs-secondary tabs-icon-left button" ng-click="modal.show()">
+        <a class="tab-item">
+          <i class="icon ion-checkmark-round"></i>
+          {{7}}
+        </a>
+        <a class="tab-item" href="#">
+          <i class="icon ion-close-round"></i>
+          {{5}}
+        </a>
+
+      </div>
+    </div>
   </ion-content>
 </ion-view>
