adding image modal

--- a/www/index.html
+++ b/www/index.html
@@ -7,10 +7,8 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <!-- inject:css -->
-<<<<<<< HEAD
-      <link rel="stylesheet" type="text/css" href="src/prePost.feed/votes.css">
-=======
->>>>>>> 4af397400da4f08bff92427374c23e4542d70592
+    <link rel="stylesheet" href="src/prePost.feed/image.css">
+    <link rel="stylesheet" href="src/prePost.feed/votes.css">
     <!-- endinject -->
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -25,22 +23,33 @@
 
     <!-- your app's js -->
     <!-- inject:js -->
+
     <script src="src/prePost.services/services.module.js"></script>
+
     <script src="src/prePost.services/posts.service.js"></script>
+
     <script src="src/prePost.services/friends.service.js"></script>
+
     <script src="src/prePost.upload/upload.module.js"></script>
+
     <script src="src/prePost.upload/upload.controller.js"></script>
+
     <script src="src/prePost.selector/selector.module.js"></script>
+
     <script src="src/prePost.selector/selector.controller.js"></script>
+
     <script src="src/prePost.profile/profile.module.js"></script>
+
     <script src="src/prePost.profile/profile.controller.js"></script>
+
     <script src="src/prePost.profile/profile-detail.controller.js"></script>
+
     <script src="src/prePost.feed/feed.module.js"></script>
+
     <script src="src/prePost.feed/feed.controller.js"></script>
-<<<<<<< HEAD
-=======
+
     <script src="src/prePost.main/prePost.module.js"></script>
->>>>>>> 4af397400da4f08bff92427374c23e4542d70592
+
     <!-- endinject -->
   </head>
   <body ng-app="prePost" animation="slide-left-right-ios7">
