--- a/www/src/prePost.feed/feed.html
+++ b/www/src/prePost.feed/feed.html
@@ -9,7 +9,7 @@
       </div>
 
       <div class="item item-body">
-        <img class="full-image" ng-src='{{post.image}}'>
+        <img class="full-image" ng-click="modal2Selected($index)" ng-src='{{post.image}}'>
       </div>
 
       <div class="item tabs tabs-secondary tabs-icon-left button" ng-click="modal.show()">
