changing syntax to controllerAs

--- a/www/src/prePost.feed/image.html
+++ b/www/src/prePost.feed/image.html
@@ -1,5 +1,5 @@
-<div class="modal image-modal transparent" ng-click="modal2.hide()">
+<div class="modal image-modal transparent" ng-click="feed.modal2.hide()">
     <ion-pane class="transparent">
-        <img ng-src="{{post.image}}" class="fullscreen-image"/>
+        <img ng-src="{{feed.post.image}}" class="fullscreen-image"/>
     </ion-pane>
 </div>
