--- a/www/src/prePost.feed/feed.html
+++ b/www/src/prePost.feed/feed.html
@@ -1,6 +1,6 @@
 <ion-view title="Feed">
   <ion-content class="padding">
-  	<div class="list card" ng-repeat="post in posts">
+  	<div class="list card" ng-repeat="post in feed.posts">
 
       <div class="item item-avatar">
         <img ng-src='{{post.user.image}}'>
@@ -9,10 +9,10 @@
       </div>
 
       <div class="item item-body">
-        <img class="full-image" ng-click="modal2Selected($index)" ng-src='{{post.image}}'>
+        <img class="full-image" ng-click="feed.modal2Selected($index)" ng-src='{{post.image}}'>
       </div>
 
-      <div class="item tabs tabs-secondary tabs-icon-left button" ng-click="modal.show()">
+      <div class="item tabs tabs-secondary tabs-icon-left button" ng-click="feed.modal.show()">
         <a class="tab-item">
           <i class="icon ion-checkmark-round"></i>
           {{7}}
