adding yes/no arrays

--- a/www/src/prePost.feed/feed.html
+++ b/www/src/prePost.feed/feed.html
@@ -12,7 +12,7 @@
         <img class="full-image" ng-click="feed.modal2Selected($index)" ng-src='{{post.image}}'>
       </div>
 
-      <div class="item tabs tabs-secondary tabs-icon-left button" ng-click="feed.modal.show()">
+      <div class="item tabs tabs-secondary tabs-icon-left button" ng-click="feed.modalSelected($index)">
         <a class="tab-item">
           <i class="icon ion-checkmark-round"></i>
           {{7}}
