adding authentication views and routes

--- a/www/index.html
+++ b/www/index.html
@@ -48,6 +48,8 @@
 
     <script src="src/prePost.feed/feed.controller.js"></script>
 
+    <script src="src/prePost.main/prePost.auth/auth.module.js"></script>
+
     <script src="src/prePost.main/prePost.module.js"></script>
 
     <!-- endinject -->
