--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,12 @@
 
     <script src="src/prePost.services/friends.service.js"></script>
 
+    <script src="src/prePost.main/prePost.auth/auth.module.js"></script>
+
+    <script src="src/prePost.main/prePost.auth/signUp.controller.js"></script>
+
+    <script src="src/prePost.main/prePost.auth/signIn.controller.js"></script>
+
     <script src="src/prePost.upload/upload.module.js"></script>
 
     <script src="src/prePost.upload/upload.controller.js"></script>
@@ -47,8 +53,6 @@
     <script src="src/prePost.feed/feed.module.js"></script>
 
     <script src="src/prePost.feed/feed.controller.js"></script>
-
-    <script src="src/prePost.main/prePost.auth/auth.module.js"></script>
 
     <script src="src/prePost.main/prePost.module.js"></script>
 
