adding auth sign in

--- a/www/index.html
+++ b/www/index.html
@@ -24,13 +24,15 @@
     <!-- your app's js -->
     <!-- inject:js -->
 
+    <script src="src/prePost.main/prePost.auth/auth.module.js"></script>
+
+    <script src="src/prePost.main/prePost.auth/auth.service.js"></script>
+
     <script src="src/prePost.services/services.module.js"></script>
 
     <script src="src/prePost.services/posts.service.js"></script>
 
     <script src="src/prePost.services/friends.service.js"></script>
-
-    <script src="src/prePost.main/prePost.auth/auth.module.js"></script>
 
     <script src="src/prePost.main/prePost.auth/signUp.controller.js"></script>
 
