--- a/www/src/prePost.main/prePost.auth/signIn.html
+++ b/www/src/prePost.main/prePost.auth/signIn.html
@@ -1,13 +1,13 @@
 <div class="list">
     <label class="item item-input">
         <span class="input-label">Username</span>
-        <input type="text">
+        <input type="text" ng-model="signIn.email">
     </label>
     <label class="item item-input">
         <span class="input-label">Password</span>
-        <input type="password">
+        <input type="password" ng-model="signIn.password">
     </label>
-    <button class="button button-block button-positive">
+    <button class="button button-block button-positive" ng-click="signIn.register(signIn.email, signIn.password)">
         Sign In
     </button>
 
